pihole/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 1.1.1.1
  containers:
    - name: pihole
      image: pihole/pihole:2021.09
      imagePullPolicy: IfNotPresent
      securityContext:
        privileged: true
      ports:
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        - containerPort: 67
          protocol: UDP
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
      volumeMounts:
        - name: etc
          mountPath: /etc/pihole
        - name: dnsmasq
          mountPath: /etc/dnsmasq.d
        # - name: pihole-ssl-conf
        #   mountPath: /etc/lighttpd/external
        - name: pihole-certs
          mountPath: /etc/lighttpd/certs
      resources:
        requests:
          memory: 128Mi
          cpu: 100m
        limits:
          memory: 2Gi
          cpu: 1
  volumes:
    - name: etc
      hostPath:
        path: /mnt/pihole/etc
        type: Directory
    - name: dnsmasq
      hostPath:
        path: /mnt/pihole/dnsmasq.d
        type: Directory
    # - name: pihole-ssl-conf
    #   configMap:
    #     name: pihole-ssl-conf
    - name: pihole-certs
      secret:
        secretName: pihole-certs
