pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  namespace: pihole
spec:
  ports:
  - port: 53
    name: dns-tcp
    protocol: TCP
  - port: 53
    name: dns-udp
    protocol: UDP
  - port: 67
    name: dhcp
    protocol: UDP
  - port: 80
    name: http
    protocol: TCP
  - port: 443
    name: https
    protocol: TCP
  selector:
    app: pihole
  type: NodePort
